<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_workout">Workout</string>
    <string name="title_stats">Stats</string>
    <string name="title_goals">Goals</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="usernameHint">Username</string>
    <string name="nameHint">Name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="re_enter_passwordHint">Re-enter Password</string>
    <string name="btnText_create_account">Create Account</string>
    <string name="Login_Link">Already a member? Login</string>
    <string name="signup_link">Create A New Account</string>
    <string name="btnText_login">Login</string>
    <string name="title_activity_run_tracker">Run Tracker</string>
    <string name="workout_heading">Select a Workout</string>
    <string name="start">Start</string>
    <string name="start_run_label">Track a Run or Walk</string>
    <string name="start_weights_label">Start Lifting Weights</string>
    <string name="start_body_label">Start a Body\nWeight Exercise</string>
    <string name="stop">Stop</string>
    <string name="distance_placeholder">Distance: %1$d m</string>
    <string name="time_placeholder">Time: %1$s</string>
    <string name="logout">Logout</string>
    <string name="no_goal">No Goal</string>
    <string name="goal_value_hint">Value of your goal</string>
    <string name="goalName">Name of your goal</string>
    <string name="add_goal">Add Goal</string>
    <string name="empty_not_saved">Goal not saved because one or more fields was empty.</string>
    <string name="addValue">Try adding your first goal</string>
    <string name="title_activity_new_goal">Add a New Goal</string>
    <string name="lbs">lbs</string>
    <string name="enter_weight">Enter Weight:</string>
    <string name="number_of_reps">Number of Reps:</string>
    <string name="number_of_sets">Number of Sets:</string>
    <string name="time_left_in_set">Time left in Set</string>
    <string name="time_left_in_break">Time left in Break</string>
    <string name="weights_activity_title">Weights Workout</string>
    <string name="body_weight_activity_title">Body-Weight Workout</string>
    <string name="runtime_label">Workout Runtime:</string>
    <string name="weightlifting_time_label">Time:</string>
    <string name="bodyweight_time_label">Time:</string>
    <string name="NewGoalActivity">Add a New Goal</string>
    <string name="run_stop_dialog_message">You ran %1$d m in %2$d min and %3$d sec!</string>
    <string name="run_time">Time</string>
    <string name="run_workout_title">Run:</string>
    <string name="distance_label">Distance:</string>
    <string name="weights_workout_title">Weights:</string>
    <string name="weightstime_label">Time:</string>
    <string name="weights_sets">Sets:</string>
    <string name="num_sets">num</string>
    <string name="weights_reps">Reps:</string>
    <string name="num_reps">numReps</string>
    <string name="bodyweight_workout_title">Body Weight:</string>
    <string name="bodyWeightTime">time</string>
    <string name="bodyweight_num_reps">numreps</string>
    <string name="bodyweight_reps">Reps</string>
</resources>