<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_workout">

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.killins.fitnesstracker.ui.workout.WorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.killins.fitnesstracker.ui.goals.GoalsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.killins.fitnesstracker.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />
</navigation>