<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bodyweightWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/bodyweight_workout_title"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bodyweight_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/bodyweight_reps"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/bodyweightWorkout"
            app:layout_constraintStart_toEndOf="@+id/bodyweightWorkout" />

        <TextView
            android:id="@+id/bodyweight_num_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/bodyweight_num_reps"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/bodyweight_reps"
            app:layout_constraintTop_toTopOf="@+id/bodyweight_reps" />

        <TextView
            android:id="@+id/bodyweight_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/weights_sets"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/bodyweight_reps"
            app:layout_constraintTop_toBottomOf="@+id/bodyweight_reps" />

        <TextView
            android:id="@+id/bodyweight_num_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_sets"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/bodyweight_sets"
            app:layout_constraintStart_toStartOf="@+id/bodyweight_num_reps" />

        <TextView
            android:id="@+id/bodyWeight_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/bodyweight_time_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bodyweight_sets"
            app:layout_constraintTop_toBottomOf="@+id/bodyweight_sets" />

        <TextView
            android:id="@+id/bodyWeightTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/bodyWeightTime"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/bodyWeight_time_label"
            app:layout_constraintStart_toStartOf="@+id/bodyweight_num_sets" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

