<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workout.WorkoutFragment">

    <TextView
        android:id="@+id/workout_heading_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/workout_heading"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_run_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_run_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/start_run_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_run_button"
        app:layout_constraintBottom_toBottomOf="@id/start_run_button"/>

    <Button
        android:id="@+id/start_run_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_run_textview"
        app:layout_constraintTop_toBottomOf="@id/workout_heading_textview" />

    <TextView
        android:id="@+id/start_weights_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_weights_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/start_weight_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_weight_button"
        app:layout_constraintBottom_toBottomOf="@id/start_weight_button"/>

    <Button
        android:id="@+id/start_weight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="@+id/start_run_button"
        app:layout_constraintTop_toBottomOf="@id/start_run_button" />

    <TextView
        android:id="@+id/start_body_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_body_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/start_body_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_body_button"
        app:layout_constraintBottom_toBottomOf="@id/start_body_button"/>

    <Button
        android:id="@+id/start_body_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="@+id/start_run_button"
        app:layout_constraintTop_toBottomOf="@id/start_weight_button" />


</androidx.constraintlayout.widget.ConstraintLayout>